Red brush width circle around cursor disappears after undo in Grease Pencil Sculpt Mode #86609

Closed
opened 2021-03-16 02:19:37 +01:00 by Matthew Gafford · 6 comments

Operating system: Win10 Home 64
Graphics card: rtx3070

Blender Version
Broken: 2.93
Worked: 2.92

Exact steps for others to reproduce the error

  • New file
  • Delete default cube
  • Add Monkey grease pencil object
  • Go into sculpt mode
  • Sculpt the shape a bit
  • Undo with CTRL-Z
  • The red circle that shows the brush width disappears
Operating system: Win10 Home 64 Graphics card: rtx3070 **Blender Version** Broken: 2.93 Worked: 2.92 **Exact steps for others to reproduce the error** - New file - Delete default cube - Add Monkey grease pencil object - Go into sculpt mode - Sculpt the shape a bit - Undo with CTRL-Z - The red circle that shows the brush width disappears

Added subscriber: @AFoxInSpace

Added subscriber: @AFoxInSpace
Eitan Traurig changed title from Red brush width circle around cursor in Grease Pencil Sculpt Mode disappears when using keyboard shortcut for undo to Red brush width circle around cursor disappears after undo in Grease Pencil Sculpt Mode 2021-03-16 19:05:30 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @EitanSomething

Added subscriber: @EitanSomething
Member

The bug was introduced in 2a8122fb65

The bug was introduced in 2a8122fb65

This issue was referenced by e6bdd57191

This issue was referenced by e6bdd57191e833f336fdb582418935b997395f98

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-03-17 11:38:51 +01:00
Thomas Dinges added this to the 2.93 LTS milestone 2023-02-07 18:46:16 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86609
No description provided.