Fix T86609: GPencil: Sculpt brush cursor disappears on undo.

Regression from rB2a8122fb65c5, somehow that piece of code was lost
during the refactor.